--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
         </blockquote>
         <p class="section__text">つまり、他者貢献することは、究極は自分の幸せのため。それを身をもって体感したからこそ、私もこれを読んでくれているあなたのような誠実で優しい男の力になりたいのです。</p>
         <div class="cta-block cta-block--gold">
-          <p class="cta-block__ribbon">＼大好評につき、配布は予告なく終了します／</p>
-          <a href="#cta-section" class="button button--accent js-open-form">今すぐセミナーを観る</a>
-          <p class="cta-block__note">※今すぐ無料で観ることができます</p>
+          <p class="cta-block__ribbon"><span>大好評につき、配布は予告なく終了します</span></p>
+          <div class="cta-block__actions">
+            <a href="#cta-section" class="button button--accent js-open-form">今すぐセミナーを観る</a>
+            <p class="cta-block__note">※今すぐ無料で観ることができます</p>
+          </div>
         </div>
       </div>
     </section>
