feat: update hero visuals and footer (without images)

--- a/index.html
+++ b/index.html
@@ -22,18 +22,11 @@
   </div>
 
   <header class="hero">
-    <div class="hero__glow"></div>
     <div class="container hero__content">
-      <p class="hero__target">なぜ、勉強や仕事はうまくいってるのに、恋愛だけがうまくいかないのか？</p>
-      <h1 class="hero__title">“モテる男”を目指さず<br>本命彼女から選ばれる<br><span>『令和の恋愛法則』</span></h1>
-      <p class="hero__subtitle">あなたらしく自然体で本命女性の『唯一無二』の男になれる<br>誠実な男性専門の恋愛ノウハウとは？</p>
-      <div class="hero__lead">
-        <p>たったの3ステップで簡単に実践できる恋愛講座を今だけ無料で公開中！</p>
-      </div>
-      <div class="hero__cta">
-        <a href="#cta-section" class="button js-open-form">今すぐセミナーを観る</a>
-        <p class="hero__note">※今すぐ無料で観ることができます</p>
-      </div>
+      <picture class="hero__visual">
+        <source media="(min-width: 768px)" srcset="renai_opt_pc.png">
+        <img src="renai_opt_sp.png" alt="THE ONLY ONE 恋愛講座のメインビジュアル">
+      </picture>
     </div>
   </header>
 
@@ -150,7 +143,7 @@
         <a href="#cta-section" class="button js-open-form">今すぐセミナーを観る</a>
         <p class="footer__note">※今すぐ無料で観ることができます</p>
       </div>
-      <p class="footer__legal">&copy; 2024 THE ONLY ONE. All rights reserved.</p>
+      <p class="footer__legal">&copy; 2025 THE ONLY ONE. All rights reserved.</p>
     </div>
   </footer>
 
