feat: switch hero visuals to webp

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <header class="hero">
     <div class="container hero__content">
       <picture class="hero__visual">
-        <source media="(min-width: 768px)" srcset="renai_opt_pc.png">
-        <img src="renai_opt_sp.png" alt="THE ONLY ONE 恋愛講座のメインビジュアル">
+        <source media="(min-width: 768px)" srcset="renai_opt_pc.webp">
+        <img src="renai_opt_sp.webp" alt="THE ONLY ONE 恋愛講座のメインビジュアル">
       </picture>
     </div>
   </header>
