Add profile photo and enhance typography

--- a/index.html
+++ b/index.html
@@ -123,15 +123,20 @@
         <h2 class="section__heading">講師プロフィール</h2>
         <div class="section__divider"></div>
         <div class="profile-card">
-          <h3>けいじ｜「いい人止まり」を“唯一無二の魅力”に変える恋愛戦略家</h3>
-          <p>26年間「いい人」止まりの状態から独学で恋愛ノウハウを構築。アプリやストリートで、250人以上の女性を口説くことに成功した後、1人の愛する女性と出会い結婚。</p>
-          <p>圧倒的な実践経験と脳科学・心理学を融合し「誠実さや優しさが武器になる」独自メソッド『THE ONLY ONE』を確立。</p>
-          <ul>
-            <li>某有名アイドルとの交際を実現（30代・自営業）</li>
-            <li>バツイチから20代の美人女性と結婚（30代・公務員）</li>
-            <li>童貞から半年で10人以上の女性と関係構築、理想の彼女をGET（25歳・会社員）</li>
-          </ul>
-          <p class="mission">ミッションは「誠実な人が報われる社会を創る」こと。</p>
+          <figure class="profile-card__image">
+            <img src="profile.jpg" alt="講師けいじのプロフィール写真">
+          </figure>
+          <div class="profile-card__body">
+            <h3>けいじ｜「いい人止まり」を“唯一無二の魅力”に変える恋愛戦略家</h3>
+            <p>26年間「いい人」止まりの状態から独学で恋愛ノウハウを構築。アプリやストリートで、250人以上の女性を口説くことに成功した後、1人の愛する女性と出会い結婚。</p>
+            <p>圧倒的な実践経験と脳科学・心理学を融合し「誠実さや優しさが武器になる」独自メソッド『THE ONLY ONE』を確立。</p>
+            <ul>
+              <li>某有名アイドルとの交際を実現（30代・自営業）</li>
+              <li>バツイチから20代の美人女性と結婚（30代・公務員）</li>
+              <li>童貞から半年で10人以上の女性と関係構築、理想の彼女をGET（25歳・会社員）</li>
+            </ul>
+            <p class="mission">ミッションは「誠実な人が報われる社会を創る」こと。</p>
+          </div>
         </div>
       </div>
     </section>
